# proliverick

./: README.md  excersises.py  gui.py  notes.txt  proliverick.py  pyproject.toml  specs.txt
proliverick/: __init__.py  __main__.py  assesements.py  cli.py  console_tools.py  gui.py  gui_tools.py  prompts.py
