[tool.poetry]
name = "proliverick"
version = "0.1.0"
description = "An app to generate excersises for foreing language students using the OpenAI API."
authors = ["Iwan van der Kleijn <iwanvanderkleijn@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ttkthemes = "^3.2.2"
simpleaichat = "^0.2.2"
pandas = "^2.1.0"
python-docx = "^0.8.11"
openpyxl = "^3.1.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
